# Video-Segmentation

./: CMakeLists.txt  README.md  segmentation.cpp
